# vara-ticket

./: .env  README.md  next.config.mjs  package-lock.json  package.json
src/app/: layout.tsx  page.tsx
src/app/api/upload/: route.ts
src/app/create/: page.tsx
src/app/event/[id]/: page.tsx
src/app/events/: page.tsx
src/app/features/wallet/: consts.ts  hooks.ts  types.ts
src/app/features/wallet/assets/: index.ts
src/app/hold/: page.tsx
src/app/holdings/: page.tsx
src/app/layouts/: PlatformLayout.tsx
src/app/my-events/: page.tsx
src/app/my-tickets/: page.tsx
src/components/: AccountButton.tsx  AccountInfo.tsx  Accounts.tsx  AccountsModal.tsx  EventCard.tsx  Loader.tsx  ModeToggle.tsx  MyEventCard.tsx  TicketCard.tsx  Wallet.tsx
src/components/ui/: Alert.tsx  Header.tsx
src/contexts/: ApisContext.tsx  IPFSContext.tsx
src/contracts/: Cargo.toml  README.md  build.rs
src/contracts/io/: Cargo.toml
src/contracts/io/src/: lib.rs
src/contracts/src/: lib.rs
src/contracts/tests/: event_tests.rs  utils.rs
src/lib/: utils.ts
src/utils/: constants.ts  index.ts
