[package]
name = "varaticket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { version = "1.4.1", features = ["debug"] }
events-io = { path = "io"}
multi-token-io = { git = "https://github.com/gear-foundation/dapps", branch = "master" }

[build-dependencies]
events-io = { path = "io"}
gear-wasm-builder = { version = "1.4.1", features = ["wasm-opt"] }

[dev-dependencies]
gstd = { version = "1.4.1"}

gtest = { version = "1.4.1" }
gclient = {  version = "1.4.1" }
tokio = { version = "1", features = ["full"] }

multi-token = { git = "https://github.com/gear-foundation/dapps", branch = "master"}
