[package]
name = "events-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { version = "1.4.1", default-features = false}
gmeta = { version = "1.4.1" }
multi-token-io = { git = "https://github.com/gear-foundation/dapps", branch = "master" }

parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
